# InsightNet

./: .gitignore  Dockerfile  README.md  comments.patch  graph.dot  main.py  pyproject.toml  results.csv  results.dot  results.json  results.jsonl  temp.py  test.py
.github/workflows/: cd.yaml  ci.yaml  ci.yml  terraform-aca.yaml  terraform-backend.yaml
graphs/: graph1.json  graph2.json  graph3.json  graph4.json
sample_graphs/: graph1.json  graph3.json
sample_requests/: request1.json
src/insightnet/: api.py  cli.py  core.py  dot_generation.py  enums.py  export.py  graph.py  graph_parser.py  main.py  network.py  routing_model.py  routing_model_parser.py  state.py
terraform/aca/: main.tf  output.tf  providers.tf  variables.tf
terraform/backend/: create-remote-storage.tf  output.tf  providers.tf
tests/: test_graph.py  test_network.py  test_skippingrouting.py
